--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="main.css">
+  <title>Portfolio</title>
+</head>
+<body>
+
+  <main>
+  <ul id="scene" 
+    data-friction-x="0.1"
+    data-friction-y="0.1"
+    data-scalar-x="25"
+    data-scalar-y="15"
+    data-limit-y="50"
+    class="scene">
+    <li class="layer" data-depth="0.40">
+      <div class="content">
+        <h1 id="title">New Site Launching Soon!</h1>
+      </div>
+      <!-- <div class="loading">
+          <img src="http://a.top4top.net/p_1990j031.gif" alt="Loading">
+      </div>
+       -->
+    </li>
+    <li class="layer" data-depth="1.00">
+      <div class="footer"></div>
+    </li>
+    <li class="layer" data-depth="0.65">
+      <div class="cloud-back">
+        <img src="https://res.cloudinary.com/jasonheecs/image/upload/v1480353347/construction/rocket_cloud_back.svg" alt="Site Launching Soon!" />
+      </div>
+    </li>
+    <li class="layer" data-depth="0.70">
+      <div class="rocket">
+        <img src="https://res.cloudinary.com/jasonheecs/image/upload/v1480353347/construction/rocket.svg" alt="Site Launching Soon!" />
+      </div>
+    </li>
+    <li class="layer" data-depth="0.75">
+      <div class="cloud-front">
+        <img src="https://res.cloudinary.com/jasonheecs/image/upload/v1480353347/construction/rocket_cloud_front.svg" alt="Site Launching Soon!" />
+      </div>
+    </li>
+  </ul>
+</main>
+
+
+
+</body>
+</html>
